--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         #copy compiled tests 
       - name : copy compiled Test classes to testresources directory 
         #working-directory: ./build/test/classes/projectp3
-        working-directory: test/projectp3
+        working-directory: ./build/test/projectp3
         run: cp -t ProjectP3Test.class 
         
         # list contents or directory
